# trackcell

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  promotion_article.md  pyproject.toml  test_import.py
.annovibe/: im.json
.github/workflows/: auto-release.yml  pub2pypi.yml
docs/: README.md  READTHEDOCS_SETUP.md  convert_annohdcell.md  requirements.txt
docs/source/: STOmics_wechat_article.md  api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst  visualization.rst
docs/source/_generated/: rpca_benchmark_results.json  rpca_benchmark_table.rst  sct_benchmark_results.json  sct_benchmark_table.rst
docs/source/_static/: .gitkeep
docs/source/_static/images/: README.md
docs/source/_templates/: .gitkeep
docs/source/benchmark/: index.rst  rpca_evaluation.rst  sct_evaluation.rst
docs/source/notebooks/: Colon_Cancer_demo.ipynb  README.md  STOmics_mouse_brain_demo.ipynb  YardCluster_STOmics_demo.ipynb
docs/source/usage/: annohdcell_conversion.rst  batch_integration.rst  computing_distances.rst  reading.rst  spatial_clustering.rst  visualization.rst  xenium_slice_separation.rst
examples/: add_geometries_to_annohdcell_example.py  convert_annohdcell_example.py  spatial_squarebin_example.py
scripts/: run_rpca_benchmark.py  run_sct_benchmark.py
tests/: analyze_hvg_gap.py  debug_theta_batch.py  sct_benchmark_data.py  test_convert_annohdcell.py  test_integrate_data.py  test_integration_sct_rpca.py  test_plot_helpers.py  test_r_sample_parity.py  test_read_data_helpers.py  test_sct_golden_parity.py  test_sct_ksmooth_residual_parity.py  test_sct_parity.py  test_sctransform.py  test_slice_separation.py  test_spatial.py  test_yardcluster.py
trackcell/: __init__.py
trackcell/benchmark/: __init__.py
trackcell/benchmark/rpca/: __init__.py  data.py  metrics.py  report.py  runner.py  sct_stepwise.py
trackcell/benchmark/sct/: __init__.py  data.py  metrics.py  report.py  runner.py
trackcell/io/: __init__.py  convert_annohdcell.py  read_data.py  read_sto.py  spatial.py
trackcell/pl/: __init__.py  napari.py  plot.py  select.py
trackcell/tl/: __init__.py  _cluster_merge.py  _r_density.py  _r_sample.py  _r_sctransform.py  _sctransform.py  _sctransform_v2.py  _spatial_graph.py  sctransform.py  slice_separation.py  spatial.py  spatial_cluster.py
trackcell/tl/integration/: __init__.py  _annoy_nn.py  _rpca.py  _xgboost_integration.py  anchors.py  integrate_data.py  integrate_sct_rpca.py  prep_sct.py  rpca_integration.py  sample_tree.py  sct_integration.py  sct_parity.py  select_features.py
trackcell/tl/rscripts/: export_rpca_benchmark_r.R  export_sct_benchmark_r.R  fit_glmGamPoi_offset.R  run_vst.R
