[tool.poetry]
name = "trackcell"
version = "0.1.0"
description = "A Python package for processing single-cell and spatial transcriptomics data"
authors = ["Zan Yuan <yfinddream@gmail.com>"]
readme = "README.md"
packages = [{include = "trackcell"}]

[tool.poetry.dependencies]
python = "^3.8"
scanpy = "^1.9.0"
geopandas = "^0.13.0"
pandas = "^2.0.0"
shapely = "^2.0.0"
imageio = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 