[tool.poetry]
name = "trackcell"
version = "0.2.8"
description = "A Python package for processing single-cell and spatial transcriptomics data"
authors = ["Zan Yuan <yfinddream@gmail.com>"]
readme = "README.md"
packages = [{include = "trackcell"}]

[tool.poetry.dependencies]
python = "^3.10"
scanpy = "^1.9.0"
geopandas = "^1.1.1"
pandas = "^2.1.0"
shapely = "^2.0.0"
imageio = "^2.31.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
pydata-sphinx-theme = "^0.15.0"
nbsphinx = "^0.9.0"
sphinx-autodoc-typehints = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 