[tool.poetry]
name = "trackcell"
version = "0.3.41"
description = "A Python package for processing single-cell and spatial transcriptomics data"
authors = ["Zan Yuan <yfinddream@gmail.com>"]
readme = "README.md"
packages = [{include = "trackcell"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scanpy = ">=1.9,<2.0"
geopandas = ">=1.1.1,<2.0"
pandas = ">=2.1,<2.4"
shapely = ">=2.0,<3.0"
imageio = ">=2.31,<3.0"
numpy = ">=1.24,<2.0"
numba = ">=0.58,<0.62"
ipympl = ">=0.9,<1.0"
h5py = ">=3.0,<4.0"
annoy = ">=1.17,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
xgboost = ">=2.0,<3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
pydata-sphinx-theme = "^0.15.0"
nbsphinx = "^0.9.0"
sphinx-gallery = "^0.15.0"
sphinx-autodoc-typehints = "^1.19.0"
ipython = "^7.0.0"

[tool.poetry.extras]
clustering = ["leidenalg", "python-igraph"]
ml = ["xgboost>=2.0,<3.0"]
sct = ["pyglmGamPoi>=0.2.1,<0.3.0"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 